# slapshot

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
docs/: index.md
docs/reference/: client.md  enums.md  errors.md  models.md  raw_requests.md  resources.md
docs/setup/: installation.md  quickstart.md
examples/: asynchronous.py  custom_client.py  draft.py  games.py  players.py  quickstart.py  raw_requests.py  records.py  schedule.py  standings.py  stats.py  teams.py
slapshot/: __init__.py  client.py  endpoints.py  enums.py  exceptions.py  introspect.py  models.py  request.py  resource.py  validation.py  version.py
slapshot/resources/: draft.py  games.py  players.py  records.py  schedule.py  standings.py  stats.py  teams.py
tests/: support.py  test_async_resources.py  test_client.py  test_draft.py  test_drift.py  test_enums.py  test_exceptions.py  test_games.py  test_integration.py  test_models.py  test_network.py  test_parity.py  test_players.py  test_records.py  test_request.py  test_schedule.py  test_standings.py  test_stats.py  test_teams.py  test_validation.py
